# HANTER

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
core/: main.py  pyproject.toml  requirements.txt
core/agents/: base.py  dev_agent.py  file_agent.py  registry.py  social_agent.py  sys_agent.py  web_agent.py
core/api/middleware/: cors.py  error_handler.py  logging.py
core/api/routes/: agents.py  memory.py  system.py  tasks.py  websocket.py
core/config/: agents.yaml  settings.yaml  skills.yaml
core/engine/: context_manager.py  orchestrator.py  planner.py  router.py
core/llm/: client.py  local.py  models.py
core/llm/prompts/: agent_prompts.py  system_prompts.py
core/memory/: embeddings.py  long_term.py  manager.py  short_term.py  summarizer.py  working_memory.py
core/models/: __init__.py  agent.py  memory.py  message.py  task.py
core/skills/: base.py  loader.py  registry.py
core/skills/builtin/dev/: code_generator.py
core/skills/builtin/file/: organizer.py
core/skills/builtin/social/: content_creator.py
core/skills/builtin/system/: monitor.py
core/skills/builtin/web/: scraper.py
core/tools/: api_client.py  browser.py  code_executor.py  file_system.py  secure_executor.py  shell.py
core/utils/: constants.py  logger.py  ram_monitor.py  sanitizers.py  validators.py
docs/: docusaurus.config.js  package.json
plugins/: README.md
scripts/: build.sh  dev.bat  dev.sh  setup.bat  setup.sh
(+66 files in other folders)
