[project]
name = "HANTER-core"
version = "1.0.0"
description = "HANTER Personal AI Agent Framework Core"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "litellm>=1.44.0",
    "httpx>=0.27.0",
    "psutil>=6.0.0",
    "aiofiles>=24.1.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
